# mpu6500_spi

./: .gitignore  CMakeLists.txt  KalmanFilter.c  cord_plot.py  euler_angle.py  gyro_accel_plot.py  kalman_filter.c  kalman_filter.h  main.c  mpu6500_lib.c  mpu6500_lib.h  spi_driver.c  spi_driver.h
HighPassFilter/: HighPassFilter.c  HighPassFilter.h
MadgwickAHRS/: MadgwickAHRS.c  MadgwickAHRS.h
MahonyAHRS/: MahonyAHRS.c  MahonyAHRS.h
MovingAverage/: MovingAverage.c  MovingAverage.h
Q_to_a/: quartirions_to_angels.c  quartirions_to_angels.h
